--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-relay": "^13.2.0",
     "react-scripts": "5.0.1",
+    "relay-runtime": "^13.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "yarn run relay && react-scripts start",
+    "build": "yarn run relay && react-scripts build",
+    "relay": "yarn run relay-compiler $@"
+  },
+  "relay": {
+    "src": "./src/",
+    "schema": "./schema.graphql"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-relay": "^13.2.0",
+    "relay-compiler": "^13.2.0"
   }
 }
